Bug 270535 - New p2.repository bundle uses 1.5 methods